test/expected/set_expl.out
cdecl> set expl
           ^
5: error: "expl": ambiguous set option; could be explicit-ecsu or explicit-int
